--- a/076BEI014_DiwasAdhikari_Self-Organizing-Map(SOM)_Project.ipynb
+++ b/076BEI014_DiwasAdhikari_Self-Organizing-Map(SOM)_Project.ipynb
@@ -5,11 +5,8 @@
    "id": "79732d8e",
    "metadata": {},
    "source": [
-    "## Project for curriculum completion of BEI - Artifical Intelligence (AI) course\n",
-    "**SUBMITTED BY:**\n",
-    "- AVINASH ARYAL (076BEI009)\n",
+    "## Self Organizing Maps (SOM)\n",
     "- DIWAS ADHIKARI (076BEI014)\n",
-    "- KSHITIZ PANDEY (076BEI019)"
    ]
   },
   {
