--- a/076BEI014_DiwasAdhikari_Self-Organizing-Map(SOM)_Project.ipynb
+++ b/076BEI014_DiwasAdhikari_Self-Organizing-Map(SOM)_Project.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Self Organizing Maps (SOM)\n",
-    "- DIWAS ADHIKARI (076BEI014)\n",
+    "- DIWAS ADHIKARI (076BEI014)\n"
    ]
   },
   {
