--- a/076BEI014_DiwasAdhikari_Self-Organizing-Map(SOM)_Project.ipynb
+++ b/076BEI014_DiwasAdhikari_Self-Organizing-Map(SOM)_Project.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "79732d8e",
-   "metadata": {},
-   "source": [
-    "## Self Organizing Maps (SOM)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "79eda7c4",
    "metadata": {},
    "source": [
     "## Kohonen's Self Organizing Map(SOM)\n",
-    "- Diwas Adhikari\n",
+    "Author: Diwas Adhikari\n",
     "SOM is a type of Artificial Neural Network (ANN) used for producing a low dimensional representation of a high dimensional dataset. It is also called Kohonen map or Kohonen network. It consists of nodes or neurons organized in a grid-like structure having an associated weight and having the dimensionality same as the dimentionality of the input data. SOM learns to map high dimensional data into a grid or lattice while reserving the topological relationships between data points. \n",
     "\n",
     "<figure>\n",
